feat: purchase API 한 번에 여러 옵션의 주문을 받을 수 있도록 수정
